# am4

./: .gitignore  404.html  Cargo.toml  Pipfile  am4-api.postman_collection.json  index.html  main.py  pyproject.toml  sitemap.xml
am4/: Cargo.toml  README.md
am4-rust/: docker-compose.yml  pgadmin_servers.json
am4-rust/scripts/: Dockerfile  import_data.py  requirements.txt
am4-web/: .gitignore  Cargo.toml  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
am4-web/public/assets/: data
am4-web/src/: App.scss  App.tsx  db.ts  index.scss  lib.rs
am4-web/src/components/: Nav.scss  Nav.tsx
am4/src/: lib.rs  ticket.rs  utils.rs
am4/src/aircraft/: custom.rs  db.rs  mod.rs
am4/src/airport/: db.rs  mod.rs
am4/tests/: db.rs
api/bot/: index.html
api/db/: index.html
api/utils/aircraft/: index.html
api/web-api/: index.html
development/core/: index.html
development/discord-bot/: index.html
development/quickstart/: index.html
development/web-api/: index.html
formulae/: index.html
guides/configuration/: index.html
guides/contribution/: index.html
guides/demand/: index.html
guides/modelling/: index.html
guides/preface/: index.html
research/planes/: aerospatiale.json  airbus.json  antonov.json  bae.json  beechcraft.json  boeing.json  bombardier.json  cessna.json  comac.json  embraer.json  fokker.json  ilyushin.json  lockheed.json  mcdg.json  other.json  saab.json  sud-aviation.json  sukhoi.json  tupolev.json
search/: search_index.json
src/: aircraft.py  api.py  db.py
tos/: index.html
(+8 files in other folders)
