[package]
name = "am4-wasm"
version = "0.2.0-alpha.3"
authors = ["cathaypacific8747 <abraham@ylcheung.com>"]
edition = "2021"
description = "Tools and utilities for the game Airline Manager 4"
repository = "https://github.com/cathaypacific8747/am4"
license = "MIT"
workspace = "../"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
am4 = { path = "../am4", features = ["wasm"] }
wasm-bindgen = "0.2.84"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = { version = "0.1.7" }

[dependencies.web-sys]
version = "0.3"
features = [
    "Document",
    "DomException",
    # "HtmlInputElement",
    # "Response",
    # "Blob",
    # "BlobPropertyBag",
]
